# vectorization-tests

./: README.md
matmul/: README.md
ordering/: CMakeLists.txt  README.md
ordering/src/: check_if_sorted.cpp
